New ATIS System: Fallback for no-realwx and some fixes
Added the fallback for realweather fetch disabled, creating
ATIS from present weather
Fixed some formatting errors, mainly missing spaces
Some code cleanup

--- a/src/ATC/CMakeLists.txt
+++ b/src/ATC/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SOURCES
 	CommStation.cxx
         ATISEncoder.cxx
         MetarPropertiesATISInformationProvider.cxx
+        CurrentWeatherATISInformationProvider.cxx
 	)
 
 set(HEADERS
@@ -16,6 +17,7 @@ set(HEADERS
 	CommStation.hxx
         ATISEncoder.hxx
         MetarPropertiesATISInformationProvider.hxx
+        CurrentWeatherATISInformationProvider.hxx
 	)
     	
 flightgear_component(ATC "${SOURCES}" "${HEADERS}")
