httpd: update mongoose and websockets
* mongoose updated to 5.3
* first stab at implementing websockets, here a property change listener
  websocket. This websocket is at ws://yourhost:yourport/PropertyListener
  see FGDATA/Docs/gui/radio.html for an example

--- a/src/Network/http/CMakeLists.txt
+++ b/src/Network/http/CMakeLists.txt
@@ -6,6 +6,9 @@ set(SOURCES
 	PropertyUriHandler.cxx
 	JsonUriHandler.cxx
 	RunUriHandler.cxx
+	PropertyChangeWebsocket.cxx
+	PropertyChangeObserver.cxx
+	jsonprops.cxx
 	)
 
 set(HEADERS
@@ -16,6 +19,10 @@ set(HEADERS
 	JsonUriHandler.hxx
 	RunUriHandler.hxx
 	HTTPRequest.hxx
+	Websocket.hxx
+	PropertyChangeWebsocket.hxx
+	PropertyChangeObserver.hxx
+	jsonprops.hxx
 	)
 
 flightgear_component(Http "${SOURCES}" "${HEADERS}")
