Tweak for Mac nightly GUI launcher

--- a/CMakeModules/FlightGearBundleInfo.plist.in
+++ b/CMakeModules/FlightGearBundleInfo.plist.in
@@ -32,5 +32,11 @@
 	
     <key>NSHumanReadableCopyright</key>
 	<string>${MACOSX_BUNDLE_COPYRIGHT}</string>
+    
+    <!-- needed for FlightGear launch to function -->
+    <key>NSMainNibFile</key>
+    <string>MainMenu</string>
+    <key>NSPrincipalClass</key>
+    <string>NSApplication</string>
 </dict>
 </plist>
