Fix link order of HTS / flite for GCC ld
- Clang, gold etc don't care but GCC ld still does.

--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -145,7 +145,7 @@ target_link_libraries(fgfs
 )
 
 if(ENABLE_FLITE)
-target_link_libraries(fgfs hts_engine flite_hts)
+    target_link_libraries(fgfs flite_hts hts_engine)
 endif()
 
 if (APPLE)  
