Allow using the system version of flite and the HTS engine
By default, if the system version exists and can be used,
then it will be used. Otherwise, the local version will be used

Original patch by  Saikrishna Arcot via
https://gitorious.org/fg/flightgear/merge_requests/1582
slightly modified

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -11,6 +11,17 @@ add_subdirectory(mongoose)
 add_subdirectory(cjson)
 
 if (ENABLE_FLITE)
-    add_subdirectory(hts_engine_API)
     add_subdirectory(flite_hts_engine)
+
+    if (SYSTEM_HTS_ENGINE)
+        set(HTS_Engine_FIND_REQUIRED TRUE)
+        find_package(HtsEngine)
+
+        include_directories(${HTS_ENGINE_INCLUDE_DIR})
+        message(STATUS "Using HTS engine includes at: ${HTS_ENGINE_INCLUDE_DIR}")
+        message(STATUS "Using HTS engine libraries: ${HTS_ENGINE_LIBRARIES}")
+    else()
+        add_subdirectory(hts_engine_API)
+        include_directories(${PROJECT_SOURCE_DIR}/3rdparty/hts_engine_API/include )
+    endif()
 endif()
