CMake: add UTF8-CPP to SimGear include directories.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -334,7 +334,7 @@ include_directories(${OPENSCENEGRAPH_INCLUDE_DIRS}
     ${ZLIB_INCLUDE_DIR}
     ${OPENGL_INCLUDE_DIR}
     ${OPENAL_INCLUDE_DIR}
-    ${SIMGEAR_INCLUDE_DIR}
+    ${SIMGEAR_INCLUDE_DIRS}
     ${PLIB_INCLUDE_DIR}
     ${SQLITE3_INCLUDED_DIR} )
 
