--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,10 +96,11 @@ IF(APPLE)
     find_library(COCOA_LIBRARY Cocoa)
     list(APPEND PLATFORM_LIBS ${COCOA_LIBRARY} ${CORESERVICES_LIBRARY})
 
-elseif(CMAKE_SYSTEM_NAME MATCHES "Linux")
+elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux" OR
+	${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
     set(USE_DBUS_DEFAULT 1)
-    find_package(UDev)
 
+    find_package(UDev)
     if(UDEV_FOUND)
         set(EVENT_INPUT_DEFAULT 1)
     endif(UDEV_FOUND)
