In-app launcher for Mac, based on Qt5.
The old Mac launcher doesn’t work on Yosemite, add a tiny
Qt-based launcher inside the main process (no need to fork /
exec) which runs before the OSG window is created.

Will be merged for 3.4, hopefully with no impact on other
platforms.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -278,6 +278,16 @@ endif (USE_DBUS)
 list(APPEND SQLITE3_LIBRARY ${CMAKE_THREAD_LIBS_INIT})
 
 ##############################################################################
+## Qt5 setup setup
+
+find_package(Qt5 5.1 COMPONENTS Widgets)
+if (Qt5Widgets_FOUND)
+    message(STATUS "Will enable Qt launcher GUI")
+    set(HAVE_QT 1)
+    set(CMAKE_AUTOMOC ON)
+endif()
+
+##############################################################################
 
 find_package(PLIB REQUIRED puaux pu js fnt)
 
