In-app launcher for Mac, based on Qt5.
The old Mac launcher doesn’t work on Yosemite, add a tiny
Qt-based launcher inside the main process (no need to fork /
exec) which runs before the OSG window is created.

Will be merged for 3.4, hopefully with no impact on other
platforms.

--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -65,5 +65,25 @@ if (APPLE)
         CocoaMouseCursor.mm
         CocoaHelpers.mm)
 endif()
+
+
+
+
+if (HAVE_QT)
+    qt5_wrap_ui(uic_sources Launcher.ui)
+    
+    include_directories(${PROJECT_BINARY_DIR}/src/GUI)
+    
+    add_library(fglauncher QtLauncher.cxx 
+                            QtLauncher.hxx
+                            AirportDiagram.cxx
+                            AirportDiagram.hxx
+                            ${uic_sources})
+                            
+    target_link_libraries(fglauncher Qt5::Core Qt5::Widgets )
+                            
+
+endif()
     		
+            
 flightgear_component(GUI "${SOURCES}" "${HEADERS}")
