--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,15 @@ include (CheckCSourceCompiles)
 include (CheckCXXSourceCompiles)
 include (CheckIncludeFile)
 
+if(COMMAND cmake_policy)
+    cmake_policy(SET CMP0054 NEW)
+    cmake_policy(SET CMP0042 NEW)
+endif()
+
+# set this before project()
+# using 10.7 because boost requires libc++ and 10.6 doesn't include it
+set(CMAKE_OSX_DEPLOYMENT_TARGET 10.7)
+
 project(FlightGear)
 
 # We have some custom .cmake scripts not in the official distribution.
