--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -70,7 +70,7 @@ endif()
 
 
 if (HAVE_QT)
-    qt5_wrap_ui(uic_sources Launcher.ui EditRatingsFilterDialog.ui)
+    qt5_wrap_ui(uic_sources Launcher.ui EditRatingsFilterDialog.ui SetupRootDialog.ui)
     qt5_add_resources(qrc_sources resources.qrc)
 
     include_directories(${PROJECT_BINARY_DIR}/src/GUI)
@@ -81,6 +81,8 @@ if (HAVE_QT)
                             AirportDiagram.hxx
                             EditRatingsFilterDialog.cxx
                             EditRatingsFilterDialog.hxx
+                            SetupRootDialog.cxx
+                            SetupRootDialog.hxx
                             ${uic_sources}
                             ${qrc_sources})
 
