Show Qt paths in CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -295,6 +295,8 @@ if (ENABLE_QT)
 	find_package(Qt5 5.1 COMPONENTS Widgets)
 	if (Qt5Widgets_FOUND)
 		message(STATUS "Will enable Qt launcher GUI")
+		message(STATUS "  Qt5Widgets version: ${Qt5Widgets_VERSION_STRING}")
+		message(STATUS "  Qt5Widgets include dir: ${Qt5Widgets_INCLUDE_DIRS}")
 		set(HAVE_QT 1)
 	endif()
 endif (ENABLE_QT)
