Default Qt to OFF on the release branch
(Should have been this way all along, since the launcher is Mac only
for 3.4)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,7 +173,7 @@ option(ENABLE_METAR      "Set to ON to build the metar application (default)" ON
 option(ENABLE_TESTS      "Set to ON to build test applications (default)" ON)
 option(ENABLE_FGCOM      "Set to ON to build the FGCom application (default)" ON)
 option(ENABLE_FLITE      "Set to ON to build the Flite text-to-speech module" ON)
-option(ENABLE_QT         "Set to ON to build the internal Qt launcher" ON)
+option(ENABLE_QT         "Set to ON to build the internal Qt launcher" OFF)
 
 if(LOGGING)
     # nothing
